--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "dedoc/scramble": "^0.8.4",
         "doctrine/dbal": "^3.7",
         "essa/api-tool-kit": "^2.1",
         "filament/filament": "^3.0-stable",
